--- a/typescript/mini-website/index.html
+++ b/typescript/mini-website/index.html
@@ -20,7 +20,7 @@
     <button class="car-btn">click to generate car</button>
 
     <p class="car-para"></p>
-    <script src="./src/app.js"></script>
+    <script src="./src/app.js" type="module"></script>
 </body>
 
 </html>
